--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-psycopg2-binary==2.9.1
-gunicorn==20.1.0
+flask
+flask_sqlalchemy
+psycopg2-binary
+Werkzeug==2.2.2
